# code-challenge

./: .gitignore  README.md
android-app-ant/: AndroidManifest.xml  ant.properties  build.sh  build.xml  create_project.sh  install.sh  local.properties  readme  readme.md  setenv.sh  setenv.sh.sample  uninstall.sh
android-app-template/: build.sh  clean.sh
android/android-app-ant/: AndroidManifest.xml  clean.sh  setenv.sh.sample
android/android-app-ant/jni/: Android.mk  Application.mk
android/android-app-template/: clean.sh  setenv.sh.sample
cpp_practical_lab/: CMakeLists.txt  CustomStruct.cpp  CustomVector.cpp  CustomVector.h  README.md  TestPractice.cpp  TestPractice.h  XTest.h  XTestPractice.h  XTestRunner.h  XTestRunnerDaemon.cpp  main.cpp  readme.txt
cpp_practical_lab/ChemProcess/: CMakeLists.txt  ChProcess.cpp  ChProcess.h  ProcessFacade.cpp  ProcessFacade.h  README.md  main.cpp
cpp_practical_lab/QuadraticEquationApproximator/: CMakeLists.txt  QESolver.cpp  QESolver.h  README.md  main.cpp
cpp_practical_lab/headers/: CustomStruct.h  XTestRunnerDaemon.h
cpp_practical_lab/src/: CMakeLists.txt  XTestPractice.cpp
cpp_practical_lab/test_frame/: CMakeLists.txt  README.md
cpp_practical_lab/test_frame/headers/: CustomVector.h
cpp_practical_lab/test_frame/src/: #XTestRunnerDaemon.cpp#  CMakeLists.txt  CustomStruct.cpp
domain_specific_languages/R/: .Rhistory  Gaussian.R
domain_specific_languages/R/ida_recap/: .Rhistory  ida.R
domain_specific_languages/promela/: Q6.pml  Q6_messages.pml  Q6_no_proxy.pml
(+22 files in other folders)
